# eyers

./: .gitattributes  .gitignore  AGENTS.md  BUGS.md  Cargo.toml  NEXT_STEPS.md  README.md  TODO.md  dictionary.db  }
scripts/: jsonl_to_sqlite.py
src/: main.rs  old.main.rs
src/modes/: app_mode.rs  key_handler.rs  mod.rs
src/modes/key_handler/: handler.rs  input_state.rs  key_action.rs  mod.rs  processing.rs
src/objects/: annotation_object.rs  mod.rs
src/resources/: style.css
src/services/: annotations.rs  bookmarks.rs  dictionary.rs  mod.rs  pdf_text.rs  translation.rs
src/text_map/: mod.rs  navigation.rs  page_text_map.rs  text_map_cache.rs  word_info.rs
src/widgets/: annotation_object.rs  annotation_panel.rs  definition_popover.rs  eyers_header_bar.rs  eyers_window.rs  highlight_overlay.rs  mod.rs  pdf_view.rs  pendingkey_box.rs  settings_window.rs  status_bar.rs  toc_panel.rs  translation_panel.rs
